// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Generic/Tag Danger 1`] = `
<span
  className="dd has-background text-caption p-1 is-rounded ml-1 bg-danger"
>
  Danger
</span>
`;

exports[`Storyshots Generic/Tag Primary 1`] = `
<span
  className="dd has-background text-caption p-1 is-rounded ml-1 bg-primary"
>
  Primary
</span>
`;
